# NcursesClock

./: CMakeLists.txt  Clock.cpp  Clock.h  Date.cpp  Date.h  DateGetter.cpp  DateGetter.h  DateNum.cpp  DateNum.h  DateNumGetter.cpp  DateNumGetter.h  DateText.cpp  DateText.h  DateTextGetter.cpp  DateTextGetter.h  GUIClock.cpp  GUIClock.h  GUITimer.cpp  GUITimer.h  Menu.cpp  Menu.h  Time.h  Time12.cpp  Time12.h  Time12Getter.cpp  Time12Getter.h  Time24.cpp  Time24.h  Time24Getter.cpp  Time24Getter.h  TimeGetter.h  Timer.cpp  Timer.h  main.cpp
test/: CMakeLists.txt  ClockFixture.cpp  TimerTest.cpp
